<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="4sp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/boxContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        android:padding="8sp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/contactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            app:layout_constraintBottom_toBottomOf="@+id/contactNameValue"
            app:layout_constraintStart_toStartOf="@+id/contactId"
            app:layout_constraintTop_toTopOf="@+id/contactNameValue" />

        <TextView
            android:id="@+id/contactNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toStartOf="@+id/contactButtonDelete"
            app:layout_constraintStart_toEndOf="@+id/contactName"
            app:layout_constraintTop_toBottomOf="@+id/contactIdValue" />

        <TextView
            android:id="@+id/contactEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            app:layout_constraintBottom_toBottomOf="@+id/contactEmailValue"
            app:layout_constraintStart_toStartOf="@+id/contactName"
            app:layout_constraintTop_toTopOf="@+id/contactEmailValue" />

        <TextView
            android:id="@+id/contactEmailValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/contactNameValue"
            app:layout_constraintStart_toStartOf="@+id/contactNameValue"
            app:layout_constraintTop_toBottomOf="@+id/contactNameValue" />

        <TextView
            android:id="@+id/contactMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_label"
            app:layout_constraintBottom_toBottomOf="@+id/contactMobileValue"
            app:layout_constraintStart_toStartOf="@+id/contactEmail"
            app:layout_constraintTop_toTopOf="@+id/contactMobileValue" />

        <TextView
            android:id="@+id/contactMobileValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/contactEmailValue"
            app:layout_constraintStart_toStartOf="@+id/contactEmailValue"
            app:layout_constraintTop_toBottomOf="@+id/contactEmailValue" />

        <Button
            android:id="@+id/contactButtonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contactId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contactIdValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/contactId"
            app:layout_constraintEnd_toEndOf="@+id/contactNameValue"
            app:layout_constraintStart_toStartOf="@+id/contactNameValue"
            app:layout_constraintTop_toTopOf="@+id/contactId" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_type_label"
            app:layout_constraintBottom_toBottomOf="@+id/contactPhoneTypeValue"
            app:layout_constraintStart_toStartOf="@+id/contactMobile"
            app:layout_constraintTop_toTopOf="@+id/contactPhoneTypeValue" />

        <TextView
            android:id="@+id/contactPhoneTypeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/contactMobileValue"
            app:layout_constraintStart_toStartOf="@+id/contactMobileValue"
            app:layout_constraintTop_toBottomOf="@+id/contactMobileValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>